# honestybox-measurement

./: .bandit  .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml  quality.yml  tests.yml
measurement/: measurements.py  results.py  units.py
measurement/plugins/download_speed/: measurements.py  results.py  results_py3.py
measurement/plugins/download_speed/tests/: test_measurements.py
measurement/plugins/internet_availability/: measurements.py  results.py  results_dataclass.py  units.py
measurement/plugins/internet_availability/tests/: test_measurements.py
measurement/plugins/ip_route/: measurements.py  results.py  results_py3.py
measurement/plugins/ip_route/tests/: test_measurements.py
measurement/plugins/latency/: measurements.py  results.py  results_py3.py
measurement/plugins/latency/tests/: test_measurements.py
measurement/plugins/netflix_fast/: measurements.py  results.py  results_py3.py
measurement/plugins/netflix_fast/tests/: test_measurements.py
measurement/plugins/netflix_fast_test/: measurements.py  results.py  results_py3.py
measurement/plugins/netflix_fast_test/tests/: test_measurements.py
measurement/plugins/speedtestdotnet/: measurements.py  results.py  results_py3.py
measurement/plugins/webpage_download/: measurements.py  results.py  results_py3.py
measurement/plugins/wifi_availability/: measurements.py  results.py  results_dataclass.py  units.py
measurement/plugins/youtube/: measurements.py  results_py3.py
(+4 files in other folders)
